Implement Portfolio page and modify footer for html pages.

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,4 +5,49 @@
 
     <title> Portfolio </title>
 
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
+
+<body>
+<div class="page-container"> 
+<div class="header" > 
+    <header> 
+        <h1> MADHUMITHA PRABAKARAN  </h1> 
+        <ul>
+            <li> <a href="#">About</a></li>
+            <li> <a href="#">Portfolio</a></li>
+            <li> <a href="#">Contact</a></li>
+        </ul>
+        
+    </header>
+</div>
+<div id="Portfolio">
+        <h1> Portfolio </h1>
+        <hr>
+        <br>
+        <br>
+
+ <div class="container_img"> 
+
+ <img id="Music" src="assets/images/Music.jpg" alt="Music"  >
+ 
+ 
+ <img id="Embedded" src="assets/images/Embedded.jpg" alt="Embedded" >
+ 
+ <img id="Books" src="assets/images/Books.jpeg" alt="Books" >
+ 
+ <img id="Photography" src="assets/images/Photography.jpg" alt="Photography" >
+ 
+ <img id="Kernel" src="assets/images/Kernel.jpg" alt="Kernel" >
+
+</div>
+
+<footer class="footer">
+
+    <p> Copyright &copy; </p>
+
+</footer>
+</div>
+</body>
+</html>
