Validated and debugged code

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
 
         <div class=profile> 
-                <img src="assets/images/madhu.jpg" alt="Profile Picture" width="250px" height="250px">
+                <img src="assets/images/madhu.jpg" alt="Profile Picture">
         
-            <p> 
+        <p> 
         I'm an Engineer, who is always curious about unknown things. 
         I worked as an Assistant Professor for three years.
         I used to teach Digital Signal Processing and Wireless Sensor Network.
