Fix attribute tags and include apps

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
             <div class="nav">  
                 <nav> 
                     <ul>
-                        <li> <a href="#">About</a></li>
-                        <li> <a href="#">Portfolio</a></li>
-                        <li> <a href="#">Contact</a></li>
+                        <li> <a href="index.html">About</a></li>
+                        <li> <a href="portfolio.html">Portfolio</a></li>
+                        <li> <a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>   
@@ -39,24 +39,24 @@
 
         <div class="container_img"> 
             <div class="Music"> 
-                <img  src="assets/images/Music.jpg" alt="Music">
+                <img  src="assets/images/quiz.jpg" alt="Quiz">
                     <div class=text_m> 
-                        <h1> Music </h1>
+                        <h1> Quiz Time </h1>
                     </div>
             </div>
         
 
             <div class="Embedded"> 
-                <img src="assets/images/Embedded.jpg" alt="Embedded">
+                <img src="assets/images/Weather.jpg" alt="Weather">
                     <div class=text_e>
-                        <h1> Embedded </h1>
+                        <h1> Weather </h1>
                     </div>
             </div>
             
             <div class="Books">
-                <img src="assets/images/Books.jpeg" alt="Books"> 
+                <img src="assets/images/space.jpg" alt="Space"> 
                     <div class=text_b>
-                        <h1> Books </h1>
+                        <h1> ISS-Tracker </h1>
                     </div>
             </div>
 
