--- a/portfolio.html
+++ b/portfolio.html
@@ -43,26 +43,30 @@
 
         <div class="container_img"> 
             <div class="Quiz"> 
+                <a href="https://madhumitha.github.io/Quiz/"></a>
                 <img  src="assets/images/quiz.jpg" alt="Quiz">
                     <div class='text_m'> 
                         <h1> Quiz Time </h1>
                     </div>
             </div>
         
-
-            <div class="Weather"> 
-                <img src="assets/images/Weather.jpg" alt="Weather">
-                    <div class='text_e'>
-                        <h1 id='weather'> Weather </h1>
-                    </div>
-            </div>
+            <a href="https://madhumitha.github.io/WeatherAPI/">
+                <div class="Weather"> 
+                    <img src="assets/images/Weather.jpg" alt="Weather">
+                        <div class='text_e'>
+                            <h1 id='weather'> Weather </h1>
+                        </div>
+                </div>
+            </a>
             
-            <div class="Books">
-                <img src="assets/images/space.jpg" alt="Space"> 
-                    <div class='text_b'>
-                        <h1> ISS-Tracker </h1>
-                    </div>
-            </div>
+            <a href="https://github.com/Madhumitha/ISS-Tracker">
+                <div class="Books">
+                    <img src="assets/images/space.jpg" alt="Space"> 
+                        <div class='text_b'>
+                            <h1> ISS-Tracker </h1>
+                        </div>
+                </div>
+            </a>
 
             <div class="Photography">
                 <img src="assets/images/Photography.jpg" alt="Photography">
